@@ -68,6 +68,7 @@ depth: 1
  * Add curlylint and update djhtml, semgrep versions in pre-commit config (Himanshu Garg)
  * Use shared header template for `ModelAdmin` header (Aman Pandey)
  * Move models and forms for `wagtailsearch.Query` to `wagtail.contrib.search_promotions` (Karl Hobley)
+ * Migrate `initErrorDetection` (tabs error counts) to a Stimulus Controller `w-count` (Aman Pandey)
 
 ## Upgrade considerations
 
